@@ -3,6 +3,7 @@ device(ao,BITBUS_IO,devAoEtherPSC,"EtherPSC")
 device(bi,BITBUS_IO,devBiEtherPSC,"EtherPSC")
 device(bo,BITBUS_IO,devBoEtherPSC,"EtherPSC")
 device(longin,BITBUS_IO,devLiEtherPSC,"EtherPSC")
+device(mbbo,BITBUS_IO,devMbboEtherPSC,"EtherPSC")
 device(stringin,BITBUS_IO,devSiEtherPSC,"EtherPSC")
 driver(drvEtherPSC)
 registrar(drvEtherPSCRegistrar)
